--- a/src/client/App(old).css
+++ b/src/client/App(old).css
@@ -42,7 +42,17 @@
   border-radius: 20px !important; /* Update border radius */
   background-color: #6e00ff;
   color: white !important;
+  animation: fadeIn 0.5s ease;
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  */
+}
+@keyframes fadeIn {
+  /* Changed */
+  from {
+    opacity: 0;
+  } /* Changed */
+  to {
+    opacity: 1;
+  } /* Changed */
 }
 
 .react-chatbot-kit-chat-bot-message-arrow {
@@ -80,16 +90,15 @@
   display: none;
 }
 
-.options-btn {
-  background-color: #6b7280 !important;
-  color: white;
-  padding: 1rem 2rem !important;
-  border-radius: 999px;
-  border: none;
-  cursor: pointer;
-  line-height: 1;
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-}
+/* .options-btn {
+    background-color: #6b7280 !important;
+    color: white;
+    padding: 1rem 2rem !important;
+    border-radius: 999px;
+    border: none;
+    cursor: pointer;
+    line-height: 1;
+  } */
 
 .options-container {
   display: flex;
@@ -105,9 +114,30 @@
   padding: 0.5rem;
   cursor: pointer;
   background-color: #0077ff;
+  color: white;
   border-radius: 5px;
   border: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.city::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  z-index: 1000;
+  width: 8px;
+  height: 8px;
+  border-top: 2px solid #fff;
+  border-right: 2px solid #fff;
+  transform: rotate(-45deg);
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.city.active::before {
+  top: 22px;
+  transform: rotate(-225deg);
 }
 
 .btn {
@@ -144,8 +174,8 @@
 }
 
 /* .btn:hover {
-    color: white;
-  } */
+      color: white;
+    } */
 
 .btn:before {
   top: 100%;
