--- a/src/client/App.css
+++ b/src/client/App.css
@@ -200,3 +200,62 @@
   top: -30px;
   left: -30px;
 }
+/*Schemes Section*/
+.schemes-section {
+  color: #ffffff;
+  background-color: #6e00ff;
+  box-shadow: none;
+  border-radius: 40px;
+  margin: 2rem auto; /* Center the section with margin */
+  padding: 2rem 1.5rem; /* Adjust padding as needed */
+}
+.schemes-title {
+  width: 100%;
+  text-align: left;
+  font-family: "Ginto Nord", sans-serif;
+  font-size: 12px !important;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  letter-spacing: normal;
+  background-color: #6e00ff;
+  color: #ffffff;
+}
+.section_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  column-gap: 2rem;
+}
+.schemes-description {
+  font-family: "GT America Standard", sans-serif;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: justify;
+  color: #ffffff;
+  background-color: #6e00ff;
+  flex: 2;
+}
+.other-info {
+  font-family: "GT America Extended", sans-serif;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: start;
+  color: #ffffff;
+  background-color: #6e00ff;
+  padding: 0;
+  margin: 1rem 0;
+  display: flex;
+  padding-bottom: 4rem;
+}
+ul {
+  list-style-type: none;
+}
+.other-info li {
+  margin-bottom: 0.5rem; /* Add space between list items */
+  padding-left: 1rem; /* Add indentation for visual clarity */
+  font-weight: lighter; /* Make list items less bold */
+}
+li::before {
+  content: "👉 ";
+}
